RESOLVED FIXED186600
[Cocoa] Web Automation: wrong modifiers sent for 'Help' virtual key
https://bugs.webkit.org/show_bug.cgi?id=186600
Summary [Cocoa] Web Automation: wrong modifiers sent for 'Help' virtual key
Blaze Burg
Reported 2018-06-13 10:56:06 PDT
This causes special_keys.py::test_webdriver_special_key_sends_keydown[HELP-expected2] to hang.
Attachments
Patch (1.82 KB, patch)
2018-06-13 10:59 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2018-06-13 10:56:29 PDT
Blaze Burg
Comment 2 2018-06-13 10:59:03 PDT
WebKit Commit Bot
Comment 3 2018-06-13 13:29:15 PDT
Comment on attachment 342677 [details] Patch Clearing flags on attachment: 342677 Committed r232807: <https://trac.webkit.org/changeset/232807>
WebKit Commit Bot
Comment 4 2018-06-13 13:29:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.